Add Subscript References.yaml

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -363,7 +363,7 @@ entries:
   - id: "De Marchi 2016"
     full: "De Marchi, A. G. 2016. *Collezione Doria Pamphili. Catalogo generale dei dipinti.* Milano: Silvana."
   - id: "Demuth 2020"
-    full: "Demuth, Petra. 2020. “Major and minor development steps in the tear treatment methods for canvas paintings: All art and technology has been contemporary.” In *Supporto ~e~(’) Immagine. Problematiche di consolidamento e di conservazione dei supporti nei dipinti contemporanei*, 55–83. Saonara: CESMAR7."
+    full: "Demuth, Petra. 2020. “Major and minor development steps in the tear treatment methods for canvas paintings: All art and technology has been contemporary.” In *Supporto <sub>e</sub>(’) Immagine. Problematiche di consolidamento e di conservazione dei supporti nei dipinti contemporanei*, 55–83. Saonara: CESMAR7."
   - id: "Demuth and Flock 2019"
     full: "Demuth, Petra, and Hannah Flock. 2019. “Der Consolidation Pen Winnie. Die Entwicklung eines kleinen, beheizbaren Klebstoff-Applikators als Generationenprojekt.” *ZKK Zeitschrift für Kunsttechnologie und Konservierun*g, no. 1: 129–36."
   - id: "Demuth and Heiber 2000"
@@ -383,7 +383,7 @@ entries:
   - id: "DIN 1976"
     full: "DIN (Deutsches Institut für Normung). 1976. *Prüfung von Textilien: Bestimmung der Grenzviskosität von Cellulosen, Grundlagen.* 54 270 part 1, Ausgabe 1976-09. Berlin: DIN."
   - id: "DIN 1977"
-    full: "DIN. 1977. *Prüfung von Textilien: Bestimmung der Grenzviskosität von Cellulosen, EWNN~mod(NaCl)~ Verfahren.* 54 270 part 3, Ausgabe 1977-08. Berlin: DIN."
+    full: "DIN. 1977. *Prüfung von Textilien: Bestimmung der Grenzviskosität von Cellulosen, EWNN<sub>mod(NaCl)</sub> Verfahren.* 54 270 part 3, Ausgabe 1977-08. Berlin: DIN."
   - id: "DIN 1996"
     full: "DIN. 1996. *Textilien–Fasern—Bestimmung der Höchstzugkraft und Höchstzugkraftdehnung an Spinnfasern* [Textile Fibres—Determination of Breaking Force and Elongation at Break of Individual Fibres]. EN ISO 5079. Berlin: DIN."
   - id: "DIN 1999"
