Corrected spelling of short form citation Smith, Thompson, and Hermans 2016
s/b Hermens, correct in bibliography and in paper; incorrect short form in bib

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -1200,7 +1200,7 @@ entries:
     full: "Slabczynski, Stefan. 1960. “The Large Vacuum Hot-Table for Wax Relining of Paintings in the Conservation Department of the Tate Gallery.” *Studies in Conservation* 5, no. 1: 1–16."
   - id: "Smith 1965"
     full: "Smith, Thor L. 1965. “Deformation and Failure of Plastics and Elastomers,” *Polymer Engineering and Science* 5, no. 4: 270–79."
-  - id: "Smith, Thompson, and Hermans 2016"
+  - id: "Smith, Thompson, and Hermens 2016"
     full: "Smith, Margaret J., K. Thompson, and E. Hermens. 2016. “Breaking Down Banners: Analytical Approaches to Determining the Materials of Painted Banners.” *Heritage Science* 4: 23. http://eprints.gla.ac.uk/116762/."
   - id: "Smith, Holmes-Smith, and Lennard 2019"
     full: "Smith, Margaret J., A. Sheila Holmes-Smith, and Frances Lennard. 2019. “Development of Non-destructive Methodology Using ATR-FTIR with PCA to Differentiate between Historical Pacific Barkcloth.” *Journal of Cultural Heritage* 39: 32–41. http://eprints.gla.ac.uk/182259/."
