Fixed short form for Carlyle, Young, and Jardine citation
was missing publication year in short form ID

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -218,7 +218,7 @@ entries:
     full: "Cardinali, M, M. I. Catalano, A. Cerasuolo, and M. B. De Ruggieri. 2002. “Sulla Sacra Famiglia del Parmigianino: cautele ottocentesche per una tecnica particolare.” In *Parmigianino e il manierismo europeo, atti del convegno internazionale di studi, Parma 13–15 giugno 2002*, edited by Lucia Fornari Schianchi and Cinisello Balsamo, 209–12. Cinisello Balsamo, Milano: Silvana."
   - id: "Carità 1955"
     full: "Carità, Roberto. 1955. “Aggiunta sui telai per affreschi trasportati.” *Bollettino dell’Istituto Centrale del Restauro* 23, no. 24: 165–70."
-  - id: "Carlyle, Young, and Jardine"
+  - id: "Carlyle, Young, and Jardine 2008"
     full: "Carlyle, L., C. Young, and S. Jardine. 2008. “The Mechanical Response of flour paste grounds.” In *Preparation for Painting: The Artist’s Choice and Its Consequences*, edited by J. H. Townsend, T. Doherty, G. Heydenreich, and J. Ridge, 123–31. London: Archetype."
   - id: "Carò, Centeno, and Mahon 2018"
     full: "Carò, Federico, Silvia A. Centeno, and Dorothy Mahon. 2018. “Painting with Recycled Materials: On the Morphology of Calcite Pseudomorphs as Evidence of the Use of Wood Ash Residues in Baroque Paintings.” *Heritage Science* 6, no. 3: 1–11."
