Fixed spelling of Kreuger 2017
s/b Krueger 2017; correct in bibliography

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -750,7 +750,7 @@ entries:
     full: "Koyano, Masako. 1968. “Treatment of Canvas Paintings: Lining” 油彩画の修復：裏打ちについて, *Scientific papers on Japanese antiques and art crafts* 古文化財の科学, 25: 69–83, The Japan Society for the Conservation of Cultural Property 古文化財科学研究会."
   - id: "Krafft 1837"
     full: "Krafft, Albrecht. 1837. *Verzeichnis der kais: Kön.* Vienna: Gemälde-Gallerie im Belvedere."
-  - id: "Kreuger 2017"
+  - id: "Krueger 2017"
     full: "Krueger, J. 2017. “Color Field Paintings and Sun-Bleaching: An Approach for Removing Stains in Unprimed Canvas.” In *Treatment 2017: Innovation in Conservation and Collection Care: 45th Annual Meeting of the American Institute for Conservation of Historic & Artistic Works May 28–June 2, 2017, Chicago,* 47. Washington, DC: AIC."
   - id: "Król-Kaczorowska 1981"
     full: "Król-Kaczorowska, Barbara. 1981. “Plersch Jan Bogumił.” In *Polski Słownik Biograficzny*, vol. 26, 718–20. Wrocław, Warszawa, Kraków, Gdańsk, Łódź: Ossolineum."
