Fixed spelling of Alexeyeva citation
s/b Alekseyeva per author

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -10,8 +10,8 @@ entries:
     full: "Ackroyd, Paul, and Caroline Villers. 2003. “The Problem with Minimalism.” In *Alternatives to Lining: Structural Treatment of Paintings on Canvas without Lining: A Conference Held Jointly by the British Association of Paintings Conservator-Restorers and the United Kingdom Institute for Conservation Paintings Section, 19 September 2003: Preprints*, edited by Mary Bustin and Tom Caley, 9–14. London: United Kingdom Institute for Conservation."
   - id: "AIC n.d."
     full: "AIC (American Institute of Conservation). n.d. Code of Ethics: Guidelines for Practice. https://www.culturalheritage.org/about-conservation/code-of-ethics."
-  - id: "Alexeyeva and Tcherkasova 1968"
-    full: "Alexeyeva, Margarita, and Zinaida Tcherkasova. 1968. “Compositions of Aqueous Solutions of Sturgeon Glue for Relining Easel Oil Paintings.” *Reports of All-Union Central Research Laboratory for Conservation and Restoration of Museum Valuables* 20: 18–26."
+  - id: "Alekseyeva and Tcherkasova 1968"
+    full: "Alekseyeva, Margarita, and Zinaida Tcherkasova. 1968. “Compositions of Aqueous Solutions of Sturgeon Glue for Relining Easel Oil Paintings.” *Reports of All-Union Central Research Laboratory for Conservation and Restoration of Museum Valuables* 20: 18–26."
   - id: "Aliabadi 2015"
     full: "Aliabadi, M. H. 2015. *Woven Composites.* London: Imperial College Press."
   - id: "Albano 1984"
