--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -132,8 +132,8 @@ entries:
     full: "Bleton, Jean, and Alain Tchapla. 2009. “SPME/GC-MS in the Characterisation of Terpenic Resins.” In *Organic Mass Spectrometry in Art and Archaeology*, edited by Maria Perla Colombini and Francesca Modugno, 261–302. Chichester: Wiley."
   - id: "Bodart 1970"
     full: "Bodart, D. 1970. “Domenico Michelini, restaurateur des tableaux à Rome au XVIII siècle.” *Revue des archéologues et historiens de l’art de Louvain* 3, 136–42."
-  - id: "Bøgh, Ketnah, and Thorvildsen 1975"
-    full: "Bøgh, Lone, Artur Ketnah, and Majken Thorvildsen. 1975. “Om forsøg med Vinnapas Dispersion EP 1.” *Meddelelser om konservering* 2, no. 5: 135–43."
+  - id: "Bøgh, Ketnath, and Thorvildsen 1975"
+    full: "Bøgh, Lone, Artur Ketnath, and Majken Thorvildsen. 1975. “Om forsøg med Vinnapas Dispersion EP 1.” *Meddelelser om konservering* 2, no. 5: 135–43."
   - id: "Böhme et al. 2020"
     full: "Böhme, Nadine, Manfred Anders, Tobias Reichelt, Katharina Schuhmann, Alexandra Bridarolli, and Aurelia Chevalier. 2020. “New Treatments for Canvas Consolidation and Conservation.” *Heritage Science* 8, art. 16. <https://doi.org/10.1186/s40494-020-0362-y>."
   - id: "Boissonnas 1961"
