Fixed Hartin et al. 2015a cite in bib
s/b Daly Hartin et al. 2015a

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -336,7 +336,7 @@ entries:
     full: "Daly Hartin, D., E. Hagen, P. Marcon, S. Michalski, and T. Strang. 2010. “Research and Development into Structural Treatments of Paintings: CCI Lining Project & CCI Octoprobe.” In *ICOM Committee for Conservation Paintings Group Workshop: Current Practice and Recent Developments in the Structural Conservation of Paintings on Canvas Supports.* DVD. Helsinki: Metropolia University of Applied Sciences."
   - id: "Daly Hartin et al. 2011"
     full: "Daly Hartin, Debra, Eric Hagan, Stefan Michalski, and Mylène Choquette. 2011. “CCI Lining Project: Testing of Lined Model Paintings from Fractions of a Second to Decades.” In *ICOM-CC Lisbon 2011: Preprints, 16th Triennial Conference, Lisbon, 19–23 September 2011*, edited by Janet Bridgland and Catherine Antomarchi, paper 1309, 288–96. Almada, Portugal: Critério Produção Grafica; Paris: ICOM Committee for Conservation."
-  - id: "Hartin et al. 2015a"
+  - id: "Daly Hartin et al. 2015a"
     full: "Daly Hartin, Debra, Stefan Michalski, Eric Hagan, and Mylène Choquette. 2015. “Overview of the CCI Lining Project: Do Linings Prevent Cracking and Cupping in Paintings?” In *AIC Paintings Specialty Group Postprints* 28, edited by Barbara Buckley, 137–50. eBook. Washington, DC: American Institute for Conservation."
   - id: "Daly Hartin et al. 2015b"
     full: "Daly Hartin, D., T. Strang, E. Hagen, and P. Marcon. 2015. “Studio Tip: Use of the CCI Octoprobe with the Willard Multipurpose Table.” In *AIC Paintings Specialty Group Postprints 28*, edited by Barbara Buckley, 169–73. eBook. Washington, DC: American Institute for Conservation."
