Fixed short form ID spelling Staudinger and Reiniche 1939
s/b Reinecke; correct in paper 16

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -1226,8 +1226,8 @@ entries:
     full: "Standring, T. J. 1988. “Some Pictures by Poussin in the Dal Pozzo Collection: Three New Inventories.” *Burlington Magazine* 130, no. 1025: 608–26."
   - id: "Staniforth and Bomford 1985"
     full: "Staniforth, Sarah, and David Bomford. 1985. “Lining and Colour Change: Further Results.” *National Gallery Technical Bulletin* 9: 65–69."
-  - id: "Staudinger and Reiniche 1939"
-    full: "Staudinger, H., and F. Reinicke. 1939. “Über den Polymerisationsgrad von Zellulosen in alten Geweben.” Melliand Textilberichte 20: 109–10."
+  - id: "Staudinger and Reinecke 1939"
+    full: "Staudinger, H., and F. Reinecke. 1939. “Über den Polymerisationsgrad von Zellulosen in alten Geweben.” Melliand Textilberichte 20: 109–10."
   - id: "Sterp Moga and Sánchez Ortiz 2019"
     full: "Sterp Moga, Emanuel, and Alicia Sánchez Ortiz. 2019. “Imanes de neodimio como propuesta de mínima intervención para procesos de conservación en soporte de tela pintados: corrección de deformaciones.” *Ge-Conservación* 1, no. 15: 65–75."
   - id: "Stoll and Fengel 1981"
