Fixed short form ID van der Donk, Herder, and van Lier 1996
s/b van der Donk, de Herder, and van Lier 1996

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -1310,7 +1310,7 @@ entries:
     full: "Utada, Shinsuke, and Tsuneyuki Morita. 1968. *Tokyo geijutsu daigaku geijutsu shiryōkan nenpō 東京芸術大学芸術資料館年報*, 23–24. Tokyo geijutsu daigaku geijutsu shiryōkan 東京芸術大学芸術資料館."
   - id: "van den Berg et al. 1996"
     full: "van den Berg, Klaas Jan, Ivana Pastorova, Leo Spetter, and Jaap J. Boon. 1996. “State of Oxidation of Diterpenoid Pinaceae Resins in Varnish, Wax Lining Material, 18th Century Resin Oil Paint, and a Recent Copper Resinate Glaze.” In *ICOM-CC 11th Triennial Meeting: Edinburgh, Scotland, 1–6 September 1996: Preprints*, edited by Janet Bridgland, 930–37. London: International Council of Museums Committee for Conservation."
-  - id: "van der Donk, Herder, and van Lier 1996"
+  - id: "van der Donk, de Herder, and van Lier 1996"
     full: "van der Donk, Herbert, Hans de Herder, and André van Lier. 1996. “Restauratie Panorama Mesdag.” In *Magisch Panorama. Panorama Mesdag, een belevenis in ruimte en tijd,* edited by Yvonne van Eekelen, Mattie Boom, Jan E Schierbeek, and Gerrit Willems, 151–63. Zwolle: Waanders."
   - id: "van Eikema Hommes and Froment 2011"
     full: "van Eikema Hommes, Margriet, and Emilie Froment. 2011. “The Decoration Programme in the Galleries of the Royal Palace Amsterdam: An Harmonious Interaction between Painting, Architecture and Light?” In *The Batavian Commissions,* edited by Marianna van der Zwaag, 35–53. Amsterdam: Royal Palace Amsterdam."
