Changed Mehra 1981 to 1981a
There is an a and b citation for Mehra 1981. a is "The Cold Lining of Paintings."

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -862,7 +862,7 @@ entries:
     full: "Mehra, Vishwa R. 1975b. “Nap-Bond Cold Lining on a Low-Pressure Table.” *Maltechnik Restauro: Internationale Zeitschrift Für Farb- Und Maltechniken, Restaurierung Und Museumsfragen: Mitteilungen Der IADA* 81, no. 2: 87–95."
   - id: "Mehra 1978"
     full: "Mehra, Vishwa R. 1978. “Cold-Lining and the Care of the Paintlayer in a Triple-Stretcher System: Also: Answers to Some Questions and Doubts about the Cold-Lining System.” In *ICOM Committee for Conservation: 5th Triennial Meeting, Zagreb, Yugoslavia, 1–8 October 1978: Preprints*, 78/2/5/1–19. Paris: International Council of Museums."
-  - id: "Mehra 1981"
+  - id: "Mehra 1981a"
     full: "Mehra, Viswha R. 1981. “The Cold Lining of Paintings.” *The Conservator* 5, no. 1: 12–14."
   - id: "Mehra 1981b"
     full: "Mehra, Vishwa R. 1981. “Minimizing Strain and Stress in Lining Canvas Paintings.” In *ICOM Committee for Conservation: 6th Triennial Meeting: Ottawa, Canada, 21–25 September 1981: Preprints*, 81/2/14-1–8. Paris: International Council of Museums."
