Added Bissell 1968 and 1999 references
These were citations in paper 22 that for some reason were missing from the bibliography.

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -124,6 +124,10 @@ entries:
     full: "Bianco, Lisa, Massimiliano Avalle, Alessandro Scattina, Paola Croveri, Cesare Pagliero, and Oscar Chiantore. 2015. “A Study on Reversibility of BEVA®371 in the Lining of Paintings.” *CULHER Journal of Cultural Heritage* 16, no. 4, 479–85."
   - id: "Bigi, Panzavolta, and Rubini 2004"
     full: "Bigi, Adriana, Silvia Panzavolta, and Katia Rubini. 2004. “Relation between Triple-Helix Content and Mechanical Properties of Gelatine Films.” *Biomaterials* 25, no. 25: 5675–80."
+  - id: "Bissell 1968"
+    full: "Bissell, R. Ward. 1968. “Artemisia Gentileschi—A New Documented Chronology.” *The Art Bulletin* 50, no. 2, 153–168."
+  - id: "Bissell 1999"
+    full: "Bissell, R. Ward. 1999. *Artemisia Gentileschi and the Authority of Art: Critical Reading and Catalogue Raisonné.* University Park: Pennsylvania State University Press; London: Eurospan."    
   - id: "Blakney 1993"
     full: "Blakney, Susan. 1993. “The Successful Use of Soft-Faced Monomesh as the Lining Support for a 14’ by 17’ Mural.” In *AIC Paintings Group Postprints, Denver, Colorado*, 25."
   - id: "Blakney and Sutton 1983"
