added Whitlum-Cooper et al. 2019 reference to bib
Citation that was supposed to be in paper 22; added

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -1364,6 +1364,8 @@ entries:
     full: "Wiesmann, Alexander 2007. “Der Restaurator: Ein Berufsbild im Wandel: Zur Gemälderestaurierung an Hand von Münchner Quellen zwischen 1850 und 1950.” PhD diss., Julius-Maximimilians-Universität Würzburg."
   - id: "White 1978"
     full: "White, Raymond. 1978. “The Application of Gas-Chromatography to the Identification of Waxes.” *Studies in Conservation* 23, no. 2: 57–68."
+  - id: "Whitlum-Cooper et al. 2019"
+    full: "Whitlum-Cooper, Francesca, Letizia Treves, and Susannah Avery-Quash. 2019. “[In]Visible: Paintings by Women Artists in the National Gallery, London: An Interview with Letizia Treves and Francesca Whitlum-Cooper.” *19: Interdisciplinary Studies in the Long Nineteenth Century* 28. https://doi.org/10.16995/ntn.850."
   - id: "Williams 1989"
     full: "Williams, Scott R. 1989. “Blooms, Blushes, Transferred Images, and Mouldy Surfaces: What Are These Distracting Accretions on Art Works?” In *Proceedings of the 14th Annual IIC-CG Conference, Toronto, May 27–30, 1988*, edited by Johanna G. Wellheiser, 65–84. Ottawa: IIC Canadian Group."
   - id: "Williams, Landel, and Ferry 1955"
