added Keith et al. 2019 reference
was missing from paper 22, added to bib

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -722,6 +722,8 @@ entries:
     full: "Keck, Caroline, and Sheldon Keck, dir. 1954. *A Future for the Past*. Audiovisual collection, Brooklyn Museum Archives, Brooklyn, NY. Digitized from 16 mm film."
   - id: "Keck and Keck 1962"
     full: "Keck, Caroline, and Sheldon Keck, dir. 1962. *Hidden Life of a Painting*. Audiovisual collection, Brooklyn Museum Archives, Brooklyn, NY. Digitized from 16 mm film."
+  - id: "Keith et al. 2019"
+    full: "Keith, Larry, Letizia Trevez, Marta Melchiorre de Crescenzo, and Joanna Russell. 2019. “Artemisia Gentileschi’s Self-Portrait as St. Catherine of Alexandria.” *National Gallery Technical Bulletin* 40: 4–17."  
   - id: "Ketnath 1976"
     full: "Ketnath, A. 1976. “Acrylhartser ved konservering af malerier på laerred under anvendelse af ‘heat seal’ metoden.” *Meddelelser om konservering* 2, nos. 7–8: 223–35."
   - id: "Ketnath and Bøgh 1975"
