Added Bomford 1978 reference
Was missing from paper 22; added to bib

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -148,6 +148,8 @@ entries:
     full: "Boitelle, R., R. Poggendorf, and L. Stevenson. Forthcoming. “A Decisive Experience: A Technical Examination of Martinique Paintings by Paul Gauguin and Charles Laval.” In *Gauguin and Laval in Martinique*. Amsterdam: Van Gogh Museum."
   - id: "Bol 1991"
     full: "Bol, L. J. 1991. *Aart Schouman: Ingenious Painter and Draughtsman*. Doornspijk: Davaco. de Witte, E., S. Florquin, and M. Goessens-Landrie. 1984. “Influence of the Modification of Dispersions on Film Properties.” In *Adhesives and Consolidants: Preprints of the Contributions to the Paris Congress, 2–8 September 1984*, edited by N. S. Brommelle, [TK pp. nos.]. London: International Institute for Conservation of Historic and Artistic Works."
+  - id: "Bomford 1978"    
+    full: "Bomford, David. 1978. “The Conservation Department of the National Gallery.” *National Gallery Technical Bulletin* 2: 3–10. http://www.nationalgallery.org.uk/technical-bulletin/bomford1978."   
   - id: "Bomford 2003"
     full: "Bomford, David. 2003. “The Conservator as Narrator: Changed Perspectives in the Conservation of Paintings.” In *Personal Viewpoints: Thoughts about Painting Conservation: A Seminar Organized by the J. Paul Getty Museum, the Getty Conservation Institute, and the Getty Research Institute at the Getty Center, Los Angeles, June 21–22, 2001*, edited by M. Leonard, 1–12. Los Angeles: Getty Conservation Institute."
   - id: "Bomford 2005"
