Added National Gallery 2019 reference
Was missing from paper 22; added to bib.

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -930,6 +930,8 @@ entries:
     full: "Nahum, Andrew, Justin McGuirk, and Eleanor Watson, eds. 2019. *Moving to Mars: Design for the Red Planet.* Exhibition catalogue. London: The Design Museum."
   - id: "Nappi 1984"
     full: "Nappi, E. 1984. “Le chiese dei Gesuiti a Napoli.” In *Seicento napoletano*: *Arte, costume, ambiente*, edited by R. Pane, 318–37. Milano: Ed. di Comunitá."
+  - id: "National Gallery 2019"
+    full: "National Gallery. 2019. “Repairing a 17th Century Canvas: Art Restoration of Artemisia Gentileschi’s Self-Portrait.” Video. London: The National Gallery."
   - id: "National Museum of Modern Art, Tokyo 1977"
     full: "National Museum of Modern Art, Tokyo, ed. 1977. *Senso kirokuga shūfuku hōkoku 戦争記録画修復報告*, Tokyo: National Museum of Modern Art, Tokyo."
   - id: "Nazarova, Malachevskaya, and Yashkina 1990"
