Added Down 2009 citation
Was missing from paper 22; added to bib

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -404,6 +404,8 @@ entries:
     full: "Dobrzańska, Katarzyna, and Magdalena Lentowicz. 2017. “Próba potwierdzenia autorstwa obrazu na płótnie ‘Ukrzyżowanie’ z 2. połowy XVIII wieku przypisywanego Janowi Bogumiłowi Plerschowi na podstawie badań i konserwacji obiektu.” MA thesis under supervision, Jan Matejko Academy of Fine Arts, Kraków."
   - id: "Doménech-Carbó et al. 2013"
     full: "Doménech-Carbó, María Teresa, Miguel F. Silva, Elvira Aura-Castro, Antonio Doménech-Carbó, Laura Fuster-López, Jose V. Gimeno-Adelantado, Stephan U. Kröner, María Luisa Martínez-Bazán, Xavier Más-Barberá, Marion F. Mecklenburg, Laura Osete-Cortina, and Dolores J. Yusá-Marco. 2013. “Multitechnique Approach to Evaluate Cleaning Treatments for Acrylic and Polyvinyl Acetate Paints.” In *New Insights into the Cleaning of Paintings: Proceedings from the Cleaning 2010 International Conference, Universidad Politecnica de Valencia and Museum Conservation Institute,* edited by Marion F. Mecklenburg, A. Elena Charola, and Robert J. Koestler, 125–34. Washington, DC: Smithsonian Institution Scholarly Press."
+  - id: "Down 2009"
+    full: "Down, Jane L. 2009. “Poly(Vinyl Acetate) and Acrylic Adhesives: A Research Update.” In *Holding It All Together: Ancient and Modern Approaches to Joining, Repair and Consolidation*, edited by Janet Ambers, Catherine Higgitt, Lynne Harrison, and David Saunders, 91–98. London: Archetype."
   - id: "Down 2015"
     full: "Down, Jane L. 2015. “The Evaluation of Selected Poly(Vinyl Acetate) and Acrylic Adhesives: A Final Research Update.” *Studies in Conservation* 60, no. 1: 33–54."
   - id: "Dufresne 2017"
