Added Howells et al. 1993 citation
Was in paper 22, missing from bib

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -680,6 +680,8 @@ entries:
     full: "Hourihane, Colum. 2013. “Flags and Standards.” In *The Grove Encyclopedia of Medieval Art and Architecture*, 514. New York: Oxford University Press."
   - id: "Howells et al. 1984"
     full: "Howells, Rachel, Aviva Burnstock, Gerry Hedley, and Stephen Hackney. 1984. “Polymer Dispersions Artificially Aged.” In *Adhesives and Consolidants: Contributions to the 1984 IIC Congress, Paris,* edited by Norman S. Brommelle, Elizabeth M. Pye, Perry Smith, and Gary Thomson, 36–43. London: International Institute for Conservation. Also published in *Studies in Conservation* 29, no. 1: 36–43."
+  - id: "Howells et al. 1993"
+    full: "Howells, R., Aviva Burnstock, Gerry Hedley, and Stephen Hackney. 1993. “Polymer Dispersions Artificially Aged.” In *Measured Opinions: Collected Papers on the Conservation of Paintings*, edited by Caroline Villers, 27–34. London: United Kingdom Institute for Conservation of Historic and Artistic Works."    
   - id: "Iaccarino Idelson 2009"
     full: "Iaccarino Idelson, Antonio. 2009. “About the Choice of Tension for Canvas Paintings.” *CeROArt: Les dilemmes de la restauration,* no. 4. https://doi.org/10.4000/ceroart.1269.” https://doi.org/10.4000/ceroart.1269."
   - id: "Iaccarino Idelson and Garofalo 2019"
