edited short form cite Hensick and Pocobene 1997
s/b Hensick, Olivier, and Pocobene 1997

--- a/content/_data/references.yaml
+++ b/content/_data/references.yaml
@@ -649,12 +649,12 @@ entries:
   - id: "Helwig and Daly Hartin 1999"
     full: "Helwig, Kate, and Debra Daly Hartin. 1999. “A Starch-based Ground Layer on a Painting Attributed to Louis Dulongpré.” *Journal of the Canadian Association for Conservation* 24: 23–28."
   - id: "Helwig et al. 2014"
-    full: "Helwig, Kate, Jennifer Poulin, Marie-Claude Corbeil. Elizabeth Moffatt, and Dominique Duguay. 2014. “Conservation Issues in Several Twentieth-Century Canadian Oil Paintings: The Role of Zinc Carboxylate Reaction Products.” In *Issues in Contemporary Oil Paint*, edited by Klaas Jan van den Berg, Matthijs de Keijzer, Alberto de Tagle, Jay Kruegar, Gunnar Heydenreich, Aviva Burnstock, and Tom Learner, 167–84. New York: Springer."
+    full: "Helwig, Kate, Jennifer Poulin, Marie-Claude Corbeil, Elizabeth Moffatt, and Dominique Duguay. 2014. “Conservation Issues in Several Twentieth-Century Canadian Oil Paintings: The Role of Zinc Carboxylate Reaction Products.” In *Issues in Contemporary Oil Paint*, edited by Klaas Jan van den Berg, Matthijs de Keijzer, Alberto de Tagle, Jay Kruegar, Gunnar Heydenreich, Aviva Burnstock, and Tom Learner, 167–84. New York: Springer."
   - id: "Henniges and Potthast 2000"
     full: "Henniges, Ute, and Antje Potthast. 2000. *Halbstoff—Bestimmung der Nullreißfestigkeit, naß oder trocken*. ISO 15361. Berlin: DIN."
   - id: "Henniges and Potthast 2015"
     full: "Henniges, Ute, and Antje Potthast. 2015. “Charakterisierung von Papier.” In *Papier und Wasser: ein Lehrbuch für Restauratoren, Konservierungswissenschaftler und Papiermacher,* edited by Gehrhardt Banik and Irene Brückle, 275–318. München: Siegel."
-  - id: "Hensick and Pocobene 1997"
+  - id: "Hensick, Olivier, and Pocobene 1997"
     full: "Hensick, T., Olivier, K., and G. Pocobene. 1997. “Puvis de Chavannes’s Allegorical Murals in the Boston Public Library: History, Technique, and Conservation.” *Journal of the American Institute for Conservation* 36, no. 4: 59–81."
   - id: "Hepburn, Pirk, and Durangphakdee 2014"
     full: "Hepburn, H. R., C. W. W. Pirk, and O. Durangphakdee. 2014. “The Chemistry of Beeswax.” In *Honeybee Nests: Composition, Structure, Function,* 319–339. Heidelberg: Springer."
